--- a/styles/header.css
+++ b/styles/header.css
@@ -23,16 +23,26 @@
 
 .search-icon{
   height: 25px;
-  margin-top: 4px;
+
 
 
 }
 
 .header {
-  height: 55px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  position: fixed;
+  height: 55px;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  background-color: white;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  border-bottom-color: rgb(231, 231, 231); 
+  z-index: 100;
+
 
 }
 
@@ -63,7 +73,62 @@
   border-color: rgb(196, 196, 196);
   margin-left: -1px;
   margin-right: 10px;
+  position: relative;
 
+}
+
+.search-button .tooltip,
+.voice-button .tooltip,
+.upload-icon-container .tooltip,
+.youtube-apps-container .tooltip,
+.notification-icon-container .tooltip{
+  position: absolute;
+  background-color: rgb(94, 94, 94);
+  color: white;
+  font-family: Roboto, Arial;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  padding-right: 8px;
+  padding-left: 8px;
+  font-size: 12px;
+  bottom: -30px;
+  opacity: 0 ;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+
+}
+
+.search-button,
+.voice-button,
+.upload-icon-container,
+.youtube-apps-container,
+.notification-icon-container {
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+}
+
+.search-button:hover .tooltip,
+.voice-button:hover .tooltip,
+.upload-icon-container:hover .tooltip,
+.youtube-apps-container:hover .tooltip,
+.notification-icon-container:hover .tooltip {
+  opacity:1;
+
+
+}
+
+.search-button:hover,
+.voice-button:hover,
+.upload-icon-container:hover,
+.youtube-apps-container:hover,
+.notification-icon-container:hover,
+.user-picture:hover,
+.youtube-logo:hover,
+.hamburger-menu:hover {
+  cursor: pointer;
 }
 
 .voice-button {
@@ -76,7 +141,6 @@
 
 .voice-search-icon{
   height: 24px;
-  margin-top: 4px;
 }
 .middle-section {
   flex: 1;
